# Botrick

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Earthfile  botrick.toml
botrick/: Cargo.toml
botrick/examples/: chunk-test-naive.rs  chunk-test.rs  line-counter.rs  sporker-ingest-naive.rs  sporker-ingest.rs
botrick/src/: args.rs  bot.rs  channelizer.rs  color.rs  config.rs  data.rs  lib.rs  logger.rs  main.rs  werdleactor.rs  werdplay.rs
botrick/src/actors/: api.rs  default.rs  irc.rs  logger.rs  misc.rs  mod.rs  spork.rs  test.rs  werdle.rs
botrick/src/bot/: command.rs  commands.rs  mod.rs
botrick/src/bot/commands/: colors_command.rs  sleep_command.rs  spork_commands.rs  testspork.rs  werdle_command.rs
botrick/src/commands/: bots.rs  colors.rs  default.rs  mod.rs
botrick/src/irc/: mod.rs
crates/botrick/: Cargo.toml
crates/botrick/examples/: chunk-test.rs  line-counter.rs
crates/botrick/src/: args.rs  color.rs  config.rs  data.rs  lib.rs
crates/botrick/src/actors/: api.rs  default.rs  irc.rs  logger.rs  misc.rs  mod.rs  spork.rs  test.rs  werdle.rs
crates/botrick/src/irc/: mod.rs
crates/misc/: Cargo.toml
crates/misc/examples/: foontest.rs  sporklike.rs  threadtest.rs
crates/sporker/: Cargo.toml
crates/sporker/src/: lib.rs  statements.rs
crates/werdle/: Cargo.toml
crates/werdle/src/: lib.rs
misc/: Cargo.toml
misc/examples/: foontest.rs
resources/config.example/: botrick.toml  irc.toml
resources/config.example/data/: werdz.sqlite
sporker/: Cargo.toml
sporker/src/: error.rs  lib.rs  statements.rs
src/: lib.rs  main.rs  spork.rs  sporklike.rs
src/bot/: mod.rs
src/sporker/: mod.rs  statements.rs
werdle/: Cargo.toml
werdle/resources/: readme.txt
werdle/src/: lib.rs
