[package]
name = "botrick"
version = "0.1.0"
edition = "2021"
# default-run = "spork"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
irc = "0.15.0"
rusqlite = "0.27.0"
tokio = { version = "1.19.0", features = ["full"] }
