[package]
name = "botrick"
version = "0.1.0"
edition = "2021"
default-run = "botrick"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
futures = "0.3.21"
irc = "0.15.0"
lazy_static = "1.4.0"
regex = "1.5.6"
rusqlite = "0.27.0"
tokio = { version = "1.19.0", features = ["full"] }

# [[bin]]
# name = "spork"
# path = "src/spork.rs"

# [[bin]]
# name = "sporklike"
# path = "src/sporklike.rs"
