[package]
name = "botrick"
version = "0.2.0"
edition = "2021"
default-run = "botrick"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.18", features = ["derive"] }
confy = "0.5.0"
futures = "0.3.25"
irc = "0.15.0"
lazy_static = "1.4.0"
linkify = "0.9.0"
regex = "1.6.0"
reqwest = { version = "0.11.12", features = ["blocking"] }
select = "0.5.0"
serde = { version = "1.0.147", features = ["derive"] }
tokio = { version = "1.21.2", features = ["full"] }
sporker = { path = "../sporker" }
proctitle = "0.1.1"

# [[bin]]
# name = "spork"
# path = "src/spork.rs"

# [[bin]]
# name = "sporklike"
# path = "src/sporklike.rs"
