[package]
name = "botrick"
version = "0.9.1"
edition = "2024"
# default-run = "botrick"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
confy = "1.0.0"
futures = "0.3.25"
irc = "1.1.0"
lazy_static = "1.4.0"
linkify = "0.10.0"
regex = "1.6.0"
reqwest = { version = "0.12.18", features = ["blocking"] }
select = "0.6.0"
serde = { version = "1.0.147", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
sporker = { path = "../sporker" }
werdle = { path = "../werdle" }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing = "0.1.37"
color-eyre = "0.6.2"
rand = "0.9.1"
rusqlite = { version = "0.36.0", features = ["bundled"] }
# console-subscriber = "0.1.8"

[[bin]]
name = "botrick"
path = "src/bin/botrick.rs"

[dev-dependencies]
itertools = "0.14.0"
rusqlite = "0.36.0"

# [[bin]]
# name = "spork"
# path = "src/spork.rs"

# [[bin]]
# name = "sporklike"
# path = "src/sporklike.rs"
