[package]
name = "botrick"
version = "0.10.1"
edition = "2024"
# default-run = "botrick"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sporker = { path = "../sporker" }
werdle = { path = "../werdle" }

clap.workspace = true
color-eyre.workspace = true
rand.workspace = true
rusqlite.workspace = true
tokio.workspace = true
regex.workspace = true
serde_json.workspace = true

irc = { version = "1.1.0", default-features = false, features = [
    "channel-lists",
    "ctcp",
    "encoding",
    "tls-rust",
    "toml_config",
] }
confy = "1.0.0"
futures = "0.3.25"
lazy_static = "1.4.0"
linkify = "0.11.0"
reqwest = { version = "0.13.4", default-features = false, features = [
    "charset",
    "http2",
    "system-proxy",
    "blocking",
    "rustls",
    "query",
] }
select = "0.6.0"
serde = { version = "1.0.147", features = ["derive"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing = "0.1.37"
# console-subscriber = "0.1.8"

[[bin]]
name = "botrick"
path = "src/bin/botrick.rs"

[dev-dependencies]
itertools = "0.14.0"
# [[bin]]
# name = "spork"
# path = "src/spork.rs"

# [[bin]]
# name = "sporklike"
# path = "src/sporklike.rs"
