[package]
name = "misc"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sporker = { path = "../sporker" }

tokio.workspace = true
clap.workspace = true
color-eyre.workspace = true
rusqlite.workspace = true
